--- a/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
+++ b/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
@@ -31,4 +31,9 @@
     <None Include="sfml-window-2.dll" />
     <None Include="sfml-window-d-2.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Conexiuni.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
