--- a/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
+++ b/ConsoleApplication3/ConsoleApplication3.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClCompile Include="Circuit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Meniu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Parametri.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Parametri.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="sfml-audio-2.dll" />
@@ -48,8 +57,14 @@
     <ClInclude Include="Circuit.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Meniu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Defineuri.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Font Include="..\..\..\..\Electrolize\Electrolize-Regular.ttf" />
+    <Font Include="Courier.ttf" />
   </ItemGroup>
 </Project>
